# laia

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
docs/: bfcl-v4.md  data-model.md  global-mmlu-lite.md  harmbench.md  ifbench.md  mbpp.md  mmmu.md  ocrbench-v2.md  reproducibility.md  rgb.md  simpleqa.md
local_ai_analysis/: __init__.py  backend.py  config.py  export.py  metrics.py  runner.py
local_ai_analysis/adapters/: native.py
local_ai_analysis/api/: __init__.py  app.py
local_ai_analysis/cli/: __init__.py  main.py
local_ai_analysis/db/: __init__.py  repository.py  schema.py
local_ai_analysis/eval/: __init__.py  bfcl_v4.py  efficiency.py  global_mmlu_lite.py  harmbench.py  ifbench.py  mbpp.py  mmmu.py  ocrbench_v2.py  resume.py  rgb.py  runtime.py  simpleqa.py
local_ai_analysis/normalization/: __init__.py  metrics.py
local_ai_analysis/utils/: jsonl.py  metadata.py
public/: results.json
scripts/: generate_linkedin_plots.py  run_lmstudio_benchmark_gap_retries.sh  run_missing_benchmark_gaps.sh  run_nvidia_benchmark_gap_retry.sh  run_nvidia_bfcl_retry.sh
web/: index.html  package-lock.json  package.json
web/public/: linkedin-carousel.html  results.json
web/public/labs/: README.md
web/src/: App.tsx  instrument.css  main.tsx  refinement.css  styles.css  worldMapPaths.ts
