[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-analysis"
version = "0.1.0"
description = "Local API benchmarks for local AI models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Local AI Analysis contributors" }
]
keywords = [
  "local-ai",
  "benchmark",
  "code-generation",
  "mbpp",
  "mmlu",
  "ollama",
  "lm-studio",
  "omlx",
  "rag",
  "rgb",
  "simpleqa"
]
dependencies = [
  "duckdb>=0.10.0",
  "fastapi>=0.110.0",
  "psutil>=5.9.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.27.0"
]

[project.optional-dependencies]
eval = [
  "datasets>=2.18.0",
  "ifbench @ git+https://github.com/allenai/IFBench.git@1091c4c3de6c1f6ed12c012ed68f11ea450b0117",
  "overrides>=7.7.0",
  "pillow>=10.0.0",
  "tree_sitter==0.21.3",
  "tree-sitter-java==0.21.0",
  "tree-sitter-javascript==0.21.4",
  "setuptools<81"
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0"
]

[project.scripts]
laia = "local_ai_analysis.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["local_ai_analysis*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
